// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Validate Action > check all '**' 'fixtures' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check all '**' 'fixtures/reporting' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check all '**/*.md' 'fixtures' 1`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 8, Issues found: 8 in 2 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "''" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 8, Issues found: 8 in 2 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::8",
  "::set-output name=number_of_issues::8",
  "::set-output name=number_of_files_with_issues::2",
  "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 8, Issues found: 8 in 2 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 8, Issues found: 8 in 2 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::8",
  "::set-output name=number_of_issues::8",
  "::set-output name=number_of_files_with_issues::2",
  "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 8, Issues found: 8 in 2 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: false sugs: false 'pull_request_with_files.json', dot: "'true'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 8, Issues found: 8 in 2 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::8",
  "::set-output name=number_of_issues::8",
  "::set-output name=number_of_files_with_issues::2",
  "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: **
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 8, Issues found: 8 in 2 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::8 spelling issues found in 2 of the 8 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "''" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: **",
  "'fork'",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 8, Issues found: 8 in 2 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::8",
  "::set-output name=number_of_issues::8",
  "::set-output name=number_of_files_with_issues::2",
  "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::8 spelling issues found in 2 of the 8 files checked.",
]
`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: **
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 8, Issues found: 8 in 2 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::8
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::2
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::8 spelling issues found in 2 of the 8 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "'**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: **",
  "'fork'",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/reporting/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 8, Issues found: 8 in 2 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::8",
  "::set-output name=number_of_issues::8",
  "::set-output name=number_of_files_with_issues::2",
  "::set-output name=files_with_issues::["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":8,"number_of_files_checked":8,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["reporting/samples_with_errors/withErrors.ts","sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::8 spelling issues found in 2 of the 8 files checked.",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: false 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: false sugs: true 'pull_request_with_files.json', dot: "'explicit'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 2`] = `[]`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 3`] = `
[
  [
    "::warning::Unable to determine which files have changed, checking files: sampleCode/**
",
  ],
  [
    "'fork'
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
  [
    "::error::4 spelling issues found in 1 of the 4 files checked.
",
  ],
]
`;

exports[`Validate Action > check files "'sampleCode/**'" incremental: true sugs: false 'bad_params/bad_unsupported_event.json', dot: "'explicit'" 4`] = `
[
  "::warning::Unable to determine which files have changed, checking files: sampleCode/**",
  "'fork'",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}",
  "::error::4 spelling issues found in 1 of the 4 files checked.",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'error'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'error'" 2`] = `[]`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'error'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'error'" 4`] = `
[
  "Pull Request",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'none'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'none'" 2`] = `[]`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'none'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'none'" 4`] = `
[
  "Pull Request",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'warning'" 1`] = `
[
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:5:27 Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "fixtures/sampleCode/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'warning'" 2`] = `[]`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'warning'" 3`] = `
[
  [
    "Pull Request
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)
",
  ],
  [
    "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)
",
  ],
  [
    "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)
",
  ],
  [
    "Files checked: 4, Issues found: 4 in 1 files.
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=success::false
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=errors::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_checked::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_issues::4
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_with_issues::1
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_skipped::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=number_of_files_cached::0
",
  ],
  [
    "
",
  ],
  [
    "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}
",
  ],
]
`;

exports[`Validate Action > check files flag errors "'sampleCode/**'" sugs: true 'pull_request_with_files.json', "'warning'" 4`] = `
[
  "Pull Request",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=19::Misspelled word (Functon) Suggestions: (function*, functor, Function, futon, fulton)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=5,col=27::Unknown word (countt) Suggestions: (count, Count, counts, county, cont)",
  "::error file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=15::Forbidden word (blacklist) Suggestions: (denylist*, backlist, blocklist, blockList, BlockList)",
  "::warning file=fixtures/sampleCode/samples_with_errors/withErrors.ts,line=9,col=53::Misspelled word (colours) Suggestions: (colors*, coolers, color, coors, clouds)",
  "Files checked: 4, Issues found: 4 in 1 files.",
  "::set-output name=success::false",
  "::set-output name=errors::0",
  "::set-output name=number_of_files_checked::4",
  "::set-output name=number_of_issues::4",
  "::set-output name=number_of_files_with_issues::1",
  "::set-output name=files_with_issues::["sampleCode/samples_with_errors/withErrors.ts"]",
  "::set-output name=number_of_files_skipped::0",
  "::set-output name=number_of_files_cached::0",
  "::set-output name=result::{"success":false,"errors":0,"number_of_issues":4,"number_of_files_checked":4,"number_of_files_skipped":0,"number_of_files_cached":0,"files_with_issues":["sampleCode/samples_with_errors/withErrors.ts"]}",
]
`;

exports[`Validate Action > check with report '' '**' 'fixtures/reporting' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check with report 'all' '**' 'fixtures/reporting' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:11:9 Unknown word (errrrorrs)",
]
`;

exports[`Validate Action > check with report 'flagged' '**' 'fixtures/reporting' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
]
`;

exports[`Validate Action > check with report 'simple' '**' 'fixtures/reporting' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:27 Unknown word (countt)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;

exports[`Validate Action > check with report 'typos' '**' 'fixtures/reporting' 1`] = `
[
  "fixtures/reporting/samples_with_errors/withErrors.ts:5:19 Misspelled word (Functon) Suggestions: (function*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:15 Forbidden word (blacklist) Suggestions: (denylist*)",
  "fixtures/reporting/samples_with_errors/withErrors.ts:9:53 Misspelled word (colours) Suggestions: (colors*)",
]
`;
